--- a/requirements.txt
+++ b/requirements.txt
@@ -150,7 +150,7 @@ types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 tzdata==2024.1
 uri-template==1.3.0
-urllib3==1.21.1
+urllib3==2.2.1
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
@@ -159,6 +159,6 @@ yarl==1.9.4
 zipp==3.18.1
 GitPython
 PyGithub
-matrix-client==0.4.0
+matrix-client
 transformers
 huggingface-hub>0.20
